--- a/arch/arm64/configs/mgk_64_k510_defconfig
+++ b/arch/arm64/configs/mgk_64_k510_defconfig
@@ -105,9 +105,6 @@ CONFIG_UFSRINGBUF_POC=y
 CONFIG_RPMB=m
 CONFIG_KEYBOARD_MTK_KPD=m
 CONFIG_KEYBOARD_MTK_PMIC=m
-#ifdef OPLUS_FEATURE_MM_OSVELTE
-CONFIG_OPLUS_FEATURE_MM_OSVELTE=m
-#endif /* OPLUS_FEATURE_MM_OSVELTE */
 
 #ifdef OPLUS_FEATURE_TP_BASIC
 CONFIG_OPLUS_DEVICE_IFNO=m
@@ -191,7 +188,6 @@ CONFIG_MTK_MD_THERMAL=m
 CONFIG_MTK_OPLUS_THERMAL=m
 CONFIG_MTK_THERMAL_TRACE=m
 CONFIG_MTK_THERMAL_INTERFACE=m
-CONFIG_MTK_THERMAL_JATM=m
 CONFIG_MTK_CHARGER_THERMAL=m
 CONFIG_MTK_BACKLIGHT_THERMAL=m
 CONFIG_MTK_BOARD_THERMAL=m
@@ -261,21 +257,6 @@ CONFIG_DRM_MEDIATEK_PANEL=m
 #else
 CONFIG_REGULATOR_FAN53870=m
 CONFIG_LCM_SM5109_I2C=m
-CONFIG_DRM_PANEL_OPLUS20171_BOE_NT37701_1080P_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS21007_SAMSUNG_AMB670YF01_QHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS22021_BOE_NT37701A_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS22021_SAMSUNG_AMF680CM01_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS22021_BOE_NT37705_FHD_CMD=m
-CONFIG_DRM_PANEL_FOLDABLE_FHD_CMD=m
-CONFIG_DRM_PANEL_OPLUS21641_BOE_NT37701_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS21641_BOE_NT37701A_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS21641_TIANMA_ILI7838A_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS21861_BOE_NT37701A_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS21861_TIANMA_ILI7838A_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS21121_BOE_NT37701A_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS21121_BOE_RM692E5_FHD_DSI_CMD=m
-CONFIG_DRM_PANEL_OPLUS21143_ILI7807S_DSI_VDO=m
-CONFIG_DRM_PANEL_OPLUS21143_TIANMA_NT36672C_DSI_VDO=m
 #endif
 CONFIG_DRM_MEDIATEK=m
 CONFIG_DRM_MEDIATEK_V2=y
@@ -485,19 +466,6 @@ CONFIG_MTK_APUSYS_EDMA_SUPPORT=y
 CONFIG_MTK_IOMMU=m
 CONFIG_MTK_DVFSRC=m
 CONFIG_MTK_PMIC_WRAP=m
-CONFIG_MTK_SCHEDULER=m
-CONFIG_MTK_OPP_CAP_INFO=y
-CONFIG_NONLINEAR_FREQ_CTL=y
-CONFIG_MTK_EAS=y
-CONFIG_MTK_THERMAL_AWARE_SCHEDULING=y
-CONFIG_MTK_LEAKAGE_AWARE_TEMP=y
-CONFIG_MTK_NEWIDLE_BALANCE=y
-CONFIG_MTK_CORE_PAUSE=y
-CONFIG_MTK_CORE_CTL=m
-CONFIG_MTK_SCHED_BIG_TASK_ROTATE=y
-CONFIG_MTK_CPUFREQ_SUGOV_EXT=m
-CONFIG_MTK_OPP_MIN=y
-CONFIG_MTK_CPUQOS_V3=m
 CONFIG_MTK_SCPSYS=m
 CONFIG_MTK_IPI=m
 CONFIG_MTK_MBOX=m
@@ -604,15 +572,7 @@ CONFIG_MTK_MMSYS=m
 CONFIG_MTK_SENSOR_SUPPORT=m
 CONFIG_MTK_SENSORHUB=m
 CONFIG_MTK_MET=m
-CONFIG_THP_ZSMALLOC=m
 CONFIG_ZRAM=m
-#ifdef OPLUS_FEATURE_HYBRIDSWAP
-CONFIG_HYBRIDSWAP=y
-CONFIG_HYBRIDSWAP_SWAPD=y
-CONFIG_HYBRIDSWAP_CORE=y
-CONFIG_HYBRIDSWAP_ZRAM=m
-CONFIG_CRYPTO_ZSTDN=m
-#endif
 CONFIG_MTK_USB_TYPEC_MUX=m
 CONFIG_TYPEC_MUX_FUSB304=m
 CONFIG_TYPEC_MUX_PTN36241G=m
@@ -637,10 +597,6 @@ CONFIG_MMC_MTK_PRO=m
 CONFIG_MMC_CQHCI=m
 CONFIG_MMC_AUTOK=m
 CONFIG_MMC_DEBUG=m
-CONFIG_MTK_FPSGO_V3=m
-CONFIG_MTK_PERFORMANCE_MODULE=m
-CONFIG_MTK_FRS=m
-CONFIG_MTK_PERF_IOCTL_MAGT=m
 CONFIG_MTK_BLOCK_IO_TRACER=m
 CONFIG_MTK_PWM=m
 CONFIG_MTK_IRTX_PWM_SUPPORT=m
@@ -650,38 +606,10 @@ CONFIG_MTK_NEWIDLE_BALANCE=y
 CONFIG_MTK_SOCINFO=m
 CONFIG_ARM_DSU_PMU=m
 
-#ifdef OPLUS_FEATURE_PERFORMANCE_SCHED
-CONFIG_OPLUS_FEATURE_PERFORMANCE_SCHED=y
-CONFIG_OPLUS_FEATURE_SCHED_ASSIST=m
-CONFIG_OPLUS_FEATURE_TASK_SCHED=m
-CONFIG_OPLUS_FEATURE_BAN_APP_SET_AFFINITY=m
-CONFIG_OPLUS_BINDER_PRIO_SKIP=y
-#endif /* OPLUS_FEATURE_PERFORMANCE_SCHED */
-CONFIG_OPLUS_FEATURE_CPU_JANKINFO=m
-CONFIG_OPLUS_BINDER_STRATEGY=m
-CONFIG_OPLUS_LOCKING_STRATEGY=m
-CONFIG_OPLUS_LOCKING_OSQ=y
-CONFIG_OPLUS_LOCKING_MONITOR=y
-CONFIG_OPLUS_CPU_AUDIO_PERF=y
-CONFIG_OPLUS_FEATURE_VT_CAP=m
-CONFIG_OPLUS_FEATURE_EAS_OPT=m
-CONFIG_OPLUS_CPUFREQ_IOWAIT_PROTECT=m
-CONFIG_OPLUS_FEATURE_LOADBALANCE=y
+# CONFIG_OPLUS_FEATURE_PERFORMANCE_SCHED is not set
+# CONFIG_OPLUS_FEATURE_PERFORMANCE_MM is not set
+# CONFIG_DYNAMIC_TUNING_SWAPPINESS is not set
 
-#ifdef OPLUS_FEATURE_PERFORMANCE_FS
-CONFIG_OPLUS_FEATURE_PERFORMANCE_FS=y
-#endif /* OPLUS_FEATURE_PERFORMANCE_FS */
-
-#ifdef OPLUS_FEATURE_PERFORMANCE_MM
-CONFIG_OPLUS_FEATURE_PERFORMANCE_MM=y
-CONFIG_OPLUS_FEATURE_MM_BOOSTPOOL=m
-CONFIG_OPLUS_FEATURE_ZRAM_OPT=m
-CONFIG_PROACTIVE_COMPACT=m
-CONFIG_OPLUS_MTK_OOM_REAPER=y
-CONFIG_OPLUS_FEATURE_UXMEM_OPT=m
-CONFIG_OPLUS_FEATURE_DYNAMIC_READAHEAD=m
-CONFIG_OPLUS_FEATURE_SIGKILL_DIAGNOSIS=m
-#endif /* OPLUS_FEATURE_PERFORMANCE_MM */
 #ifdef OPLUS_BUG_STABILITY
 CONFIG_OPLUS_SYSTEM_KERNEL=y
 CONFIG_OPLUS_FEATURE_CMDLINE=m
@@ -690,8 +618,6 @@ CONFIG_OPLUS_FEATURE_BUILDVARIANT=m
 CONFIG_OPLUS_FEATURE_OPROJECT=m
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_MTK_BOOT_COMMON=m
-CONFIG_OPLUS_FEATURE_MTK_FORCE_SHUTDOWN=m
-CONFIG_OPLUS_FEATURE_SHUTDOWN_DETECT=m
 #endif /* OPLUS_BUG_STABILITY */
 
 CONFIG_MTK_CAM_CAL=m
@@ -727,9 +653,6 @@ CONFIG_VIDEO_MTK_ISP_IPESYS=m
 CONFIG_V4L2_FWNODE=m
 CONFIG_RPMSG_MTK_CCD=m
 CONFIG_FRAME_WARN=3600
-#ifdef OPLUS_FEATURE_HANS
-CONFIG_OPLUS_FEATURE_HANS_GKI=m
-#endif /* OPLUS_FEATURE_HANS */
 
 #ifdef OPLUS_ARCH_EXTENDS
 CONFIG_SND_SOC_FSA=m
@@ -807,37 +730,9 @@ CONFIG_UFF_FINGERPRINT_MTK=y
 #for UFF end
 #endif /* OPLUS_FEATURE_FINGERPRINT */
 
-#ifdef OPLUS_FEATURE_MEMLEAK_DETECT
-CONFIG_DUMP_TASKS_MEM=m
-#endif
-
-#ifdef OPLUS_FEATURE_CPUFREQ_BOUNCING
-CONFIG_OPLUS_FEATURE_GKI_CPUFREQ_BOUNCING=m
-#endif /* OPLUS_FEATURE_CPUFREQ_BOUNCING */
-
-CONFIG_OPLUS_FEATURE_PHOENIX=m
-CONFIG_OPLUS_FEATURE_KMSG_WB=m
-CONFIG_OPLUS_FEATURE_THEIA=m
 CONFIG_OPLUS_FEATURE_FEEDBACK=m
-CONFIG_OPLUS_FEATURE_DEATH_HEALER=m
-CONFIG_OPLUS_FEATURE_HUNG_TASK_ENHANCE=m
-CONFIG_OPLUS_FEATURE_FDLEAK_CHECK=m
-CONFIG_OPLUS_BSP_DFR_USERSPACE_BACKTRACE=m
-CONFIG_OPLUS_FEATURE_SAUPWK=m
-#CONFIG_OPLUS_FEATURE_SHUTDOWN_DETECT=m
 CONFIG_OPLUS_FEATURE_PROJECTINFO=m
 CONFIG_OPLUS_FEATURE_BOOTARGS=m
-CONFIG_OPLUS_FEATURE_INIT_WATCHDOG=m
-CONFIG_OPLUS_FEATURE_KEYEVENT_HANDLER=m
-CONFIG_OPLUS_FEATURE_COMBKEY_MONITOR=m
-
-#ifdef CONFIG_SCHEDUTIL_USE_TL
-CONFIG_SCHEDUTIL_USE_TL=y
-#endif /* CONFIG_SCHEDUTIL_USE_TL */
-
-#ifdef CONFIG_OPLUS_FEATURE_TOUCH_BOOST
-CONFIG_OPLUS_FEATURE_TOUCH_BOOST=m
-#endif /* CONFIG_OPLUS_FEATURE_TOUCH_BOOST */
 
 #ifdef OPLUS_FEATURE_TP_BASIC
 CONFIG_SIM_DETECT=m
@@ -855,30 +750,12 @@ CONFIG_CHR_DEV_SG=m
 #CONFIG_OPLUS_FEATURE_STATS_CALC=m
 #endif /* OPLUS_FEATURE_STATS_CALC */
 
-CONFIG_OPLUS_FEATURE_BINDER_STATS_ENABLE=y
 CONFIG_OPLUS_CAM_THERMAL=m
 CONFIG_OPLUS_SHELL_THERMAL=m
-CONFIG_OPLUS_FEATURE_MIDAS_GKI=m
 CONFIG_EXT_MODULES="../vendor/mediatek/kernel_modules/connectivity/common ../vendor/mediatek/kernel_modules/connectivity/conninfra ../vendor/mediatek/kernel_modules/connectivity/connfem ../vendor/mediatek/kernel_modules/connectivity/gps/gps_stp ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v010 ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v030 ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v050 ../vendor/mediatek/kernel_modules/connectivity/gps/gps_pwr ../vendor/mediatek/kernel_modules/connectivity/gps/gps_scp ../vendor/mediatek/kernel_modules/gpu ../vendor/mediatek/kernel_modules/connectivity/fmradio"
 CONFIG_NFC_CHIP_SUPPORT=y
 CONFIG_NFC_ST21NFC=m
 CONFIG_NFC_ST54_SPI=m
-
-#ifdef OPLUS_FEATURE_MM
-CONFIG_KSHRINK_SLABD=m
-CONFIG_PCPPAGES_OPT=m
-CONFIG_MAPPED_PROTECT=m
-CONFIG_MAPPED_PROTECT_ALL=y
-CONFIG_KSHRINK_LRUVECD=m
-CONFIG_LOOK_AROUND=m
-CONFIG_ABORT_MM_OPT=m
-#endif
-CONFIG_LOCKING_PROTECT=y
-CONFIG_PCPU_RWSEM_LOCKING_PROTECT=y
-
-#ifdef OPLUS_FEATURE_OMRG
-CONFIG_OPLUS_OMRG=m
-#endif /* OPLUS_FEATURE_OMRG */
 
 CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
@@ -896,13 +773,6 @@ CONFIG_NETFILTER_XT_MATCH_DSCP=y
 CONFIG_OPLUS_FEATURE_OLC=m
 #endif /* OPLUS_FEATURE_OLC */
 
-#ifdef OPLUS_FEATURE_LAST_BOOT_REASON
-CONFIG_OPLUS_FEATURE_LAST_BOOT_REASON=m
-#endif /*OPLUS_FEATURE_LAST_BOOT_REASON*/
-
-#ifdef OPLUS_FEATURE_LAST_BOOT_REASON
-CONFIG_OPLUS_FEATURE_PMIC_MONITOR_MTK=m
-#endif /*OPLUS_FEATURE_LAST_BOOT_REASON*/
 CONFIG_SLAB_WL2864C=m
 CONFIG_HQ_CAMERA_LDO=m
 CONFIG_MTK_FLASHLIGHT_AW36518=m
@@ -922,5 +792,4 @@ CONFIG_MXM_DOWN=m
 
 CONFIG_TOUCHSCREEN_SYNA_TCM2=m
 
-CONFIG_OPLUS_POWERINFO_STANDBY_DEBUG=y
 CONFIG_MTK_SCMI_TIMEOUT_HOOK=y
