--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -171,8 +171,8 @@
 		bootargs = "console=tty0 root=/dev/ram \
 			rcupdate.rcu_expedited=1 transparent_hugepage=never \
 			8250.nr_uarts=2 \
-			log_buf_len=2m \
 			vmalloc=400M swiotlb=noforce \
+			log_buf_len=2m"; //
 		kaslr-seed = <0 0>;
 	};
 
