--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,3 +1,5 @@
+CONFIG_LOCALVERSION="-LainKernel-r3"
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -54,6 +56,9 @@ CONFIG_ARCH_SPRD=y
 CONFIG_ARM64_ERRATUM_2454944=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=32
+CONFIG_UNAME_OVERRIDE=y
+CONFIG_UNAME_OVERRIDE_TARGET="com.google.android.gms"
+CONFIG_UNAME_OVERRIDE_STRING="5.10.177-android12-9-00001-g25f6aed0b75f-ab10758107"
 CONFIG_PARAVIRT=y
 CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_COMPAT=y
